[DOCS] Make the description of '.nav--fit' more understandable

--- a/Resources/Private/Sass/Objects/_Navigation.scss
+++ b/Resources/Private/Sass/Objects/_Navigation.scss
@@ -5,7 +5,7 @@ A modified version of the navigation object from inuit.css
 
 .nav - Throws a list into horizontal mode.
 .nav.nav--stacked - Throws a list into vertical mode.
-.nav.nav--fit - Force a nav to occupy 100% of the available width of its parent.
+.nav.nav--fit - Forces a list to occupy 100% of the available width of it's parent.
 
 Markup:
 <ul class="{$modifiers}">
