[TASK] Enhance the readabillity of the modifier class name by removing the max-width

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -238,19 +238,17 @@
 	border-bottom: 1px solid @baseBorderColor;
 }
 .kss-styleguideElement__heading {
-	width: 75%;
 	margin-bottom: @baseSpacing/2;
 	font-family: @baseFontFamily;
 	color: @baseTextColor;
 	p {
-		margin: 0;
+		margin: @baseIndent 0 0;
 	}
 }
 .kss-styleguideElement__class {
 	position: absolute;
 	top: 0;
 	right: 0;
-	max-width: 25%;
 	padding: @baseSpacing/2 @baseSpacing;
 	border: 1px solid @baseBorderColor;
 	border-top: none;
