[FEATURE] Hide the duplicate example box if an 'isPureCode' marker was found inside the description

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -220,6 +220,7 @@
 	border-left: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
 	font-family: @baseFontFamily;
+	font-size: @baseFontSize - 2;
 	color: @baseTextColor;
 	p {
 		margin: @baseSpacing 0;
@@ -231,6 +232,7 @@
 .kss-styleguideSection {
 	border-left: 1px solid @baseBorderColor;
 	border-right: 1px solid @baseBorderColor;
+	.kss___hideExamples & { display: none; }
 }
 .kss-styleguideElement {
 	position: relative;
