--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -9,6 +9,7 @@
 // Image-Url($imagePath)
 //
 // Returns the path of an Image asset.
+// <!= isPureCode !>
 //
 // Markup:
 // .selector {
@@ -27,6 +28,7 @@
 // Relative Size($target-size, $context, $unit)
 //
 // Calculates em's based on pixel values.
+// <!= isPureCode !>
 //
 // Markup:
 // .selector {
@@ -44,6 +46,7 @@
 // Text direction check
 //
 // Checks the reading-direction of the site based on the '$direction' variable and sets the correct $start and $end variables
+// <!= isPureCode !>
 //
 $direction: ltr !default;
 $start: left !default;
@@ -58,6 +61,7 @@ $end: right !default;
 // Color-Adjust($color, $contrast)
 //
 // Adjusts a color based on the lightness which is passed as a second parameter, this function was written by @necolas(https://github.com/necolas/).
+// <!= isPureCode !>
 //
 // Markup:
 // .selector {
@@ -80,6 +84,7 @@ $end: right !default;
 // Map-Fetch($map, $keys)
 //
 // Navigates through nested Sass maps, this function was written by @jlong(https://github.com/jlong/)
+// <!= isPureCode !>
 //
 // Markup:
 // @each $key, $value in map-get($headings, elements) {
@@ -110,6 +115,7 @@ $end: right !default;
 // Map-RemoveKeys($map, $keys)
 //
 // Removes multiple keys in a Sass map.
+// <!= isPureCode !>
 //
 // Markup:
 // $newDecalarationsMap: map-removeKeys($declarations, font-size margin-bottom);
