--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -67,35 +67,20 @@ input[type="radio"] {
 /*
 Buttons
 
+For additional styling, please refer to the Button Object (4.1.1).
+
 Markup:
-<input type="submit" value="Send" />
+<button>Send button</button>
+<input type="button" value="Button" />
+<input type="reset" value="Reset" />
+<input type="submit" value="Submit" />
 
 Styleguide 2.1.3
 */
-%btn,
 button,
 input[type="button"],
 input[type="reset"],
-input[type="submit"] {
-	cursor: pointer;
-	@include rem(margin-bottom, map-get($button, bottomSpacing));
-	/**
-	 * Set in em's so we can change the size of the button depending on the font-size
-	 */
-	padding: map-get($button, innerPadding);
-
-	border: 0;
-	border-radius: $brand-border-radius;
-	background: map-get($button, background);
-
-	font-size: map-get($button, fontSize);
-	/**
-	 * Normalize the font-weight accross <input>, <button> and the .btn class
-	 */
-	font-weight: normal;
-	line-height: 1;
-	color: map-get($button, textColor);
-}
+input[type="submit"] { }
 
 /*
 Form wrapper elements
