[DOCS] Add the btn class on the submit element in the form--inline example

--- a/Resources/Private/Sass/Objects/_Form.scss
+++ b/Resources/Private/Sass/Objects/_Form.scss
@@ -12,7 +12,7 @@ Markup:
 	<label class="label--checkbox">
 		<input type="checkbox">Remember me
 	</label>
-	<button type="submit">Sign in</button>
+	<button type="submit" class="btn">Sign in</button>
 </form>
 
 Styleguide 4.1.2
