--- a/Resources/Private/Sass/Generic/_Widths.scss
+++ b/Resources/Private/Sass/Generic/_Widths.scss
@@ -138,7 +138,7 @@ Sizes which are used in conjunction with other objects and abstractions like the
 .one-whole - One whole
 
 Markup:
-<div class="{$modifiers} kss___exampleWidth">.{$modifiers}</div>
+<div class="{$modifiers} kss___exampleGridItem">.{$modifiers}</div>
 
 Styleguide 3.2.1
 */
