--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -96,9 +96,13 @@
 		This Extension is based on the <a href="https://github.com/t3b/t3b_template" target="_blank">t3b_template</a> boilerplate.
 	</footer>
 
-	<!-- SCRIPTS -->
+
 	<script src="public/prettify.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="public/styleguide.js"></script>
+
+	<script type="text/javascript"
+		src="../Resources/Private/Javascripts/Libaries/requirejs/require.js"
+		data-main="../Resources/Private/Javascripts/Main"></script>
 </body>
 </html>
