[MISC] Add the ext_icon.gif as the standard favicon for the styleguide

--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="public/kss.css">
 	<link rel="stylesheet" href="public/style.css">
 	<link rel="stylesheet" href="../Resources/Public/Stylesheets/Main.css">
+	<link rel="shortcut icon" href="../ext_icon.gif" />
 </head>
 <body class="kssBody">
 	<header class="kss___header" role="banner">
