--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -10,86 +10,82 @@
 	<meta name="generator" content="kss-node" />
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="public/kss.css">
-	<link rel="stylesheet" href="public/style.css">
 	<link rel="stylesheet" href="../Resources/Public/Stylesheets/Main.css">
 	<link rel="shortcut icon" href="../ext_icon.gif" />
 </head>
 <body class="kssBody">
-	<header class="kss___header" role="banner">
-		<h1><a href="index.html"><!= pkg.name !> Styleguide</a></h1>
-	</header>
-	<div class="g">
-		<div class="gi one-quarter">
-			<nav class="kss___navWrapper">
-				<ul class="nav nav--stacked kss___nav" data-kss-activeMenuIndex="{{rootNumber}}">
-					<li class="kss___nav__item kss___nav__item--root"><a href="index.html">0.0: Overview</a></li>
-					{{#eachRoot}}
-					<li class="kss___nav__item"><a href="section-{{reference}}.html">{{reference}}.0: {{header}}</a></li>
-					{{/eachRoot}}
-				</ul>
-				{{#if overview}}
-				{{else}}
-				<ul class="nav nav--stacked kss___navSub">
-					{{#eachSection rootNumber}}
-					{{#whenDepth 1}}
-					{{else}}
-					<li class="kss___navSub__item"><a href="#block-{{reference}}">
-						<span class="kss___navSub__item__ref">{{reference}}</span><span class="kss___navSub__item__header">{{header}}</span>
-					</a></li>
-					{{/whenDepth}}
-					{{/eachSection}}
-				</ul>
-				{{/if}}
-			</nav>
-		</div>
-		<main class="gi three-quarters" role="main">
-			<article class="kss___contentWrapper">
-				{{#if overview}}
-				{{html overview}}
-				{{else}}
+	<nav class="kss___navWrapper">
+		<ul class="nav nav--stacked kss___nav" id="kss___nav" data-kss-activeMenuIndex="{{rootNumber}}">
+			<li class="kss___nav__item kss___nav__item--root"><a href="index.html">0.0: Overview</a></li>
+			{{#eachRoot}}
+			<li class="kss___nav__item"><a href="section-{{reference}}.html">{{reference}}.0: {{header}}</a></li>
+			{{/eachRoot}}
+		</ul>
+		{{#if overview}}
+		{{else}}
+		<ul class="nav nav--stacked kss___navSub">
+			{{#eachSection rootNumber}}
+			{{#whenDepth 1}}
+			{{else}}
+			<li class="kss___navSub__item"><a href="#block-{{reference}}">
+				<span class="kss___navSub__item__ref">{{reference}}</span><span class="kss___navSub__item__header">{{header}}</span>
+			</a></li>
+			{{/whenDepth}}
+			{{/eachSection}}
+		</ul>
+		{{/if}}
+	</nav>
+	<div class="kss___siteWrapper">
+		<header class="kss___header" role="banner">
+			<a href="#kss___nav" class="kss___header__toggleNav" data-action="toggle" data-axis="x" data-target="#kss___nav">&equiv;</a>
+			<h1><a href="index.html"><!= pkg.name !> Styleguide</a></h1>
+		</header>
+		<main class="kss___contentWrapper" role="main">
+			{{#if overview}}
+			{{html overview}}
+			{{else}}
 
-				{{#eachSection rootNumber}}
-				{{#whenDepth 1}}
-				<h1 class="kss-title" id="block-{{ reference }}">
+			{{#eachSection rootNumber}}
+			{{#whenDepth 1}}
+			<h1 class="kss-title" id="block-{{ reference }}">
+				<a class="kss-title__refLink" href="#block-{{ reference }}">#</a>
+				<span class="kss-ref">{{ reference }}.0</span> - {{ header }}
+			</h1>
+			{{else}}
+			<section class="kss-depth-{{ refDepth }}" id="block-{{ reference }}">
+				<h1 class="kss-title">
 					<a class="kss-title__refLink" href="#block-{{ reference }}">#</a>
-					<span class="kss-ref">{{ reference }}.0</span> - {{ header }}
+					<span class="kss-ref">{{ reference }}</span> - {{ header }}
 				</h1>
-				{{else}}
-				<section class="kss-depth-{{ refDepth }}" id="block-{{ reference }}">
-					<h1 class="kss-title">
-						<a class="kss-title__refLink" href="#block-{{ reference }}">#</a>
-						<span class="kss-ref">{{ reference }}</span> - {{ header }}
-					</h1>
-					{{/whenDepth}}
-					{{#ifAny markup modifiers}}
-					<div class="kss-box">{{html description}}</div>
-					<div class="kss-styleguideSection">
-						<div class="kss-styleguideElement cf">
-							<div class="kss-styleguideElement__heading"><b>Default</b></div>
-							{{modifierMarkup}}
-						</div>
-						{{#eachModifier}}
-						<div class="kss-styleguideElement cf">
-							<div class="kss-styleguideElement__heading"><b>{{html description}}</b></div>
-							<div class="kss-styleguideElement__class">{{name}}</div>
-							{{modifierMarkup}}
-						</div>
-						{{/eachModifier}}
-					</div>
-					<div class="kss-markup">
-						<pre class="prettyprint lang-html">{{markup}}</pre>
-					</div>
-					{{else}}
-					{{#if description}}
-					{{html description}}
-					{{/if}}
-					{{/ifAny}}
-					{{#whenDepth 1}} {{else}}
-				</section>
 				{{/whenDepth}}
-				{{/eachSection}}
+				{{#ifAny markup modifiers}}
+				<div class="kss-box">{{html description}}</div>
+				<div class="kss-styleguideSection">
+					<div class="kss-styleguideElement cf">
+						<div class="kss-styleguideElement__heading"><b>Default</b></div>
+						{{modifierMarkup}}
+					</div>
+					{{#eachModifier}}
+					<div class="kss-styleguideElement cf">
+						<div class="kss-styleguideElement__heading"><b>{{html description}}</b></div>
+						<div class="kss-styleguideElement__class">{{name}}</div>
+						{{modifierMarkup}}
+					</div>
+					{{/eachModifier}}
+				</div>
+				<div class="kss-markup">
+					<pre class="prettyprint lang-html linenums">{{markup}}</pre>
+				</div>
+				{{else}}
+				{{#if description}}
+				{{html description}}
 				{{/if}}
-			</article>
+				{{/ifAny}}
+				{{#whenDepth 1}} {{else}}
+			</section>
+			{{/whenDepth}}
+			{{/eachSection}}
+			{{/if}}
 		</main>
 	</div>
 
