--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -1,10 +1,13 @@
+//
 // Vars
+//
 @baseFontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @baseBackgroundColor: #FFF;
+@darkBackgroundColor: #243746;
+@darkActionColor: #344D61;
 @baseBorderColor: #eee;
 @baseActionColor: #4183c4;
-@activeColor: #d26911;
 @lightGrey: #f9f9f9;
 
 @baseFontSize: 16px;
@@ -14,19 +17,26 @@
 @baseIndent: 20px;
 
 
-/* Base styles */
+//
+// Base element styles
+//
 .kssBody {
-	background: @baseBackgroundColor;
+	background: #edf1f4;
 	margin: 0;
 	overflow: hidden;
 }
 
-/* Header */
+
+//
+// Styleguide Header
+//
 .kss___header {
-	position: relative;
+	position: fixed;
+	top: 0;
+	width: 100%;
 	z-index: 1;
 	margin-bottom: @baseSpacing*2;
-	padding: 26px @baseIndent*4 26px @baseIndent;
+	padding: 26px @baseIndent*4 26px;
 	border-bottom: 1px solid @baseBorderColor;
 	font-family: @baseFontFamily;
 	background: @baseBackgroundColor;
@@ -44,99 +54,133 @@
 		}
 	}
 }
+	.kss___header__toggleNav {
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: inline-block;
+		height: 100%;
+		width: 72px;
+		text-align: center;
+		line-height: 74px;
+		font-size: 30px;
+		font-family: Arial;
+		transition: .2s ease color;
+		&:hover {
+			text-decoration: none;
+		}
+	}
+	.kss___header__toggleNav--active {
+		color: @baseTextColor;
+	}
 
+
+//
+// Styleguide Navigation
+//
 .kss___navWrapper {
-	padding: @baseSpacing*3 @baseIndent 0;
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  z-index: 999999;
+  width: 480px;
+  background: @darkBackgroundColor;
 	font-family: @baseFontFamily;
 	font-size: @baseFontSize;
 }
-.kss___nav__item {
-	border-bottom: 1px solid @baseBorderColor;
-	> a {
-		color: @baseActionColor;
-		padding: @baseSpacing 3px @baseSpacing @baseSpacing/2;
-		transition: .2s ease all;
-		border-left: 2px solid #FFF;
-		transition: .2s ease all;
-		&:hover {
-			text-decoration: none;
-			background: @lightGrey;
-			border-color: @lightGrey;
-			color: @baseTextColor;
+
+.kss___nav {
+	padding: 18px @baseIndent 0;
+}
+	.kss___nav__item {
+		border-bottom: 1px solid @darkActionColor;
+		> a {
+			color: @baseBackgroundColor;
+			padding: @baseSpacing 3px @baseSpacing @baseSpacing;
+			transition: .2s ease all;
+			border-left: 3px solid @darkBackgroundColor;
+			transition: .2s ease all;
+			&:hover {
+				text-decoration: none;
+				background: @darkActionColor;
+				border-color: @darkActionColor;
+			}
+		}
+		&:last-child {
+			border-bottom: 0;
 		}
 	}
-	&:last-child {
-		border-bottom: 0;
+	.kss___nav__item--active > a {
+		border-color: @baseActionColor;
+		&:hover {
+			border-color: @baseActionColor;
+			background: 0;
+			cursor: default;
+		}
 	}
-}
-.kss___nav__item--active > a {
-	color: @baseTextColor;
-	border-color: @activeColor;
-	&:hover {
-		border-color: @activeColor;
-		cursor: default;
-		background: 0;
-	}
-}
-
-.kss___nav--sticky {
-	position: fixed;
-	top: 0;
-	width: 21%;
-	height: 100%;
-	overflow-y: scroll;
-}
 
 .kss___navSub {
 	font-size: 12px;
+	letter-spacing: .4px;
 	padding-bottom: @baseSpacing;
 }
-.kss___navSub__item {
-	display: table-row !important;
-	line-height: 1.2;
-	> a {
-		padding: 2px @baseSpacing/2 2px @baseIndent;
-		border-left: 2px solid #fff;
-		transition: .2s ease all;
-		font-weight: 600;
-		&:hover {
-			text-decoration: none;
-			color: @baseTextColor;
+	.kss___navSub__item {
+		display: table-row !important;
+		line-height: 1.2;
+		> a {
+			padding: 2px @baseSpacing/2 2px @baseSpacing*2;
+			border-left: 3px solid @darkBackgroundColor;
+			color: @baseBackgroundColor;
+			transition: .2s ease all;
+			font-weight: 600;
+			&:hover {
+				text-decoration: none;
+				opacity: 1;
+			}
 		}
 	}
-}
-.kss___navSub__item--2 {
-	> a {
-		margin-top: .5em;
+	.kss___navSub__item--2 {
+		> a {
+			margin-top: .5em;
+		}
+		&:first-child > a {
+			margin-top: 0;
+		}
 	}
-	&:first-child > a {
-		margin-top: 0;
+	.kss___navSub__item--3 > a {
+		opacity: .7;
+		padding-left: @baseSpacing*3;
+		font-weight: 300;
 	}
-}
-.kss___navSub__item--3 > a {
-	padding-left: 30px;
-	font-weight: 400;
-}
-.kss___navSub__item--active {
-	> a {
-		color: @baseTextColor;
-		border-color: @activeColor;
+	.kss___navSub__item--active {
+		> a {
+			border-color: @baseActionColor;
+		}
 	}
-}
-.kss___navSub__item__ref {
-	display: table-cell;
-	padding-right: @baseSpacing/2;
-}
-.kss___navSub__item__header {
-	display: table-cell;
-}
+	.kss___navSub__item__ref {
+		display: table-cell;
+		padding-right: @baseSpacing/2;
+	}
+	.kss___navSub__item__header {
+		display: table-cell;
+	}
 
-/* Styleguide */
+
+//
+// Styleguide Contentwrapper
+//
+.kss___siteWrapper {
+	position: relative;
+}
 .kss___contentWrapper {
-	padding-right: @baseIndent*4;
+	padding: @baseIndent*4 @baseIndent*4 0;
 }
 
-// Styleguide headings
+
+//
+// Styleguide Headings
+//
 .kss-title,
 .kss___contentWrapper > h1 {
 	position: relative;
@@ -209,8 +253,11 @@
 	}
 }
 
-// Styleguide description box
-.kss-box {
+
+//
+// Styleguide Element
+//
+.kss-box { // Description wrapper
 	padding: 1px @baseIndent;
 	background: #f1f1f1;
 	border-right: 1px solid #ddd;
@@ -224,26 +271,25 @@
 	}
 	&:empty { display: none; }
 }
-
-// Code example
-.kss-styleguideSection {
+.kss-styleguideSection { // Rendered example
+	background: @baseBackgroundColor;
 	border-left: 1px solid @baseBorderColor;
 	border-right: 1px solid @baseBorderColor;
 	.kss___hideExamples & { display: none; }
 }
-.kss-styleguideElement {
+.kss-styleguideElement { // Modifier wrapper
 	position: relative;
 	padding: @baseIndent;
 	border-bottom: 1px solid @baseBorderColor;
 }
-.kss-styleguideElement__heading {
-	margin-bottom: @baseSpacing/2;
-	font-family: @baseFontFamily;
-	color: @baseTextColor;
-	p {
-		margin: @baseIndent 0 0;
+	.kss-styleguideElement__heading {
+		margin-bottom: @baseSpacing/2;
+		font-family: @baseFontFamily;
+		color: @baseTextColor;
+		p {
+			margin: @baseIndent 0 0;
+		}
 	}
-}
 .kss-styleguideElement__class {
 	position: absolute;
 	top: 0;
@@ -259,35 +305,24 @@
 	border-radius: 0 0 0 @baseBorderRadius;
 	transition: .2s ease all;
 	.kss-styleguideElement:hover & {
-		background: @activeColor;
-		border-color: @activeColor;
+		background: @baseActionColor;
+		border-color: @baseActionColor;
 		color: #FFF;
 	}
 }
-
-
-
-/* Prettify */
-.kss-markup {
+.kss-markup {  // Markup wrapper
 	padding-bottom: @baseSpacing*3;
 }
-.prettyprint {
-	padding: @baseSpacing;
-	background: #edf6f8;
-	border: 1px solid #dde7ea;
-	border-top: 0;
-	font-size: 12px;
-	line-height: 1.2;
-	border-radius: 0 0 @baseBorderRadius @baseBorderRadius;
-}
-.pln{color:#000}@media screen{.str{color:#080}.kwd{color:#008}.com{color:#800}.typ{color:#606}.lit{color:#066}.pun,.opn,.clo{color:#660}.tag{color:#008}.atn{color:#606}.atv{color:#080}.dec,.var{color:#606}.fun{color:red}}@media print,projection{.str{color:#060}.kwd{color:#006;font-weight:bold}.com{color:#600;font-style:italic}.typ{color:#404;font-weight:bold}.lit{color:#044}.pun,.opn,.clo{color:#440}.tag{color:#006;font-weight:bold}.atn{color:#404}.atv{color:#060}}ol.linenums{margin-top:0;margin-bottom:0}li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8{list-style-type:none}li.L1,li.L3,li.L5,li.L7,li.L9{background:#eee}
 
 
-/* Footer */
+
+//
+// Styleguide Footer
+//
 .kss___footer {
 	margin-top: @baseSpacing*2;
-	margin-left: 23%;
 	padding: 26px @baseIndent;
+	background: @baseBackgroundColor;
 	border-top: 1px solid @baseBorderColor;
 	font-size: 11.5px;
 	font-family: @baseFontFamily;
@@ -295,7 +330,9 @@
 }
 
 
-// Example styles
+//
+// Styleguide Example/Additional element or modifier styles
+//
 .kss___exampleGridItem {
 	background: #ECECEC;
 	min-height: 32px;
@@ -304,3 +341,52 @@
 	line-height: 1;
 	padding: 10px;
 }
+
+
+
+
+/* Pretty printing styles. Used with prettify.js.
+ *
+ * This version is slight modified based on the original version.
+ *
+ * Name:	Stanley Ng
+ * Email: 	stanleyhlng@googlegroups.com
+ *
+ * Reference:
+ * http://code.google.com/p/google-code-prettify/source/browse/trunk/src/prettify.css
+ */
+.pln{color:#48484C}.str{color:#D14}.kwd{color:#1E347B}.com{color:#93A1A1}.typ{color:teal}.lit{color:#195F91}.clo,.opn,.pun{color:#93A1A1}.tag{color:#008}.atn{color:teal}.atv{color:#D14}.dec,.var{color:teal}.fun{color:#DC322F}
+
+/* Put a border around prettyprinted code snippets. */
+pre.prettyprint {
+  background-color: #F7F7F9;
+  padding: @baseIndent 0;
+  font-size: 12px;
+  border: 1px solid #E1E1E8;
+  border-top: 0;
+}
+
+pre.prettyprint.linenums {
+  box-shadow: 40px 0 0 #FBFBFC inset, 41px 0 0 #ECECF0 inset;
+}
+
+/* Specify class=linenums on a pre to get line numbering */
+ol.linenums {
+  color: #1E347B;
+  margin: 0 0 0 10px; }
+
+ol.linenums li {
+  color: #BEBEC5;
+  line-height: 18px;
+  padding-left: 12px;
+  text-shadow: 0 1px 0 #FFFFFF; }
+
+li.L0,
+li.L1,
+li.L2,
+li.L3,
+li.L5,
+li.L6,
+li.L7,
+li.L8 {
+  list-style-type: normal; }
