[TASK] Add the dev build of Modernizr to the styleguide

--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="public/kss.css">
 	<link rel="stylesheet" href="../Resources/Public/Stylesheets/Main.css">
 	<link rel="shortcut icon" href="../ext_icon.gif" />
+	<script src="../Resources/Private/Javascripts/Libaries/modernizr/modernizr.js"></script>
 </head>
 <body class="kssBody">
 	<nav class="kss___navWrapper">
