--- a/Resources/Private/Sass/_Settings/_MediaQueries.scss
+++ b/Resources/Private/Sass/_Settings/_MediaQueries.scss
@@ -14,7 +14,8 @@
 // Media-Query SASS Mixins($target-size, $context, $unit)
 //
 // Wraps rules around the desired media query context.
-// <!= isPureCode !>
+//
+// <!= type: css || isPureCode !>
 //
 // Markup:
 // @include min-screen(width) {}             - shortcut for @media screen and (min-width ...)
