--- a/Resources/Private/Sass/_Settings/_Mixins.scss
+++ b/Resources/Private/Sass/_Settings/_Mixins.scss
@@ -9,7 +9,8 @@
 // High density Image-Dimensions Mixin($file-name, $width, $height)
 //
 // Creates the required rules for high density optimized images.
-// <!= isPureCode !>
+//
+// <!= type: css || isPureCode !>
 //
 // Markup:
 // .selector {
@@ -30,7 +31,8 @@
 // A image-replacement mixin which generates the image-dimensions as CSS rules and
 // @extends the .ir rule inside the _helper.scss file.
 // Default $display-mode is set to 'block'.
-// <!= isPureCode !>
+//
+// <!= type: css || isPureCode !>
 //
 // Markup:
 // .selector {
@@ -54,7 +56,8 @@
 // REM Unit Mixin($property, $value)
 //
 // Creates a property independent 'rem' calculation with a pixel fallback, default property is set to 'font-size'.
-// <!= isPureCode !>
+//
+// <!= type: css || isPureCode !>
 //
 // Markup:
 // .selector {
@@ -73,7 +76,8 @@
 // Font-Size Mixin($font-size, $append-vrythm)
 //
 // Creates a fully formed type style (sizing and vertical rhythm) by passing in a single value.
-// <!= isPureCode !>
+//
+// <!= type: css || isPureCode !>
 //
 // Markup:
 // .selector {
@@ -94,7 +98,8 @@
 // CSS Triangle Mixin($triangle-size, $triangle-color, $triangle-direction)
 //
 // Creates an css arrow as per http://cssarrowplease.com/.
-// <!= isPureCode !>
+//
+// <!= type: css || isPureCode !>
 //
 // Markup:
 // .selector:after {
