[BUGFIX] Fix a visual bug in FF, where the nav toggle link still gets an underlined text-decoration

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -67,6 +67,7 @@
 		font-size: 30px;
 		font-family: Arial;
 		transition: .2s ease color;
+		text-decoration: none;
 		&:hover {
 			text-decoration: none;
 		}
