--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -272,6 +272,12 @@
 	}
 	&:empty { display: none; }
 }
+.kss-box__modifierTable {
+	margin-top: @baseSpacing !important;
+	p {
+		margin: 0;
+	}
+}
 .kss-styleguideSection { // Rendered example
 	background: @baseBackgroundColor;
 	border-left: 1px solid @baseBorderColor;
