[TASK] Add an :hover effect for the menuToggle button

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -72,6 +72,7 @@
 			text-decoration: none;
 		}
 	}
+	.kss___header__toggleNav:hover,
 	.kss___header__toggleNav--active {
 		color: @baseTextColor;
 	}
