[DOCS] Fix the explanational comment for the primary brandColor class

--- a/Resources/Private/Sass/Generic/_Brand.scss
+++ b/Resources/Private/Sass/Generic/_Brand.scss
@@ -24,7 +24,7 @@ Styleguide 5.1.1
 /*
 Brand color helpers
 
-.brandColor-primary - test color.
+.brandColor-primary - Primary brand color.
 
 Markup:
 <span class="{$modifiers}">Brand color helpers.</span>
