--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -278,6 +278,21 @@
 	p {
 		margin: 0;
 	}
+	th,
+	td {
+		padding: .15em 0 !important;
+		vertical-align: middle;
+		font-size: 12px;
+		font-weight: bold;
+	}
+}
+.kss-box__modifierTable__modifierName {
+	padding: 5px 10px;
+	margin-right: @baseSpacing;
+	margin-bottom: 0;
+	font-weight: 400;
+	background-color: #F7F7F9;
+	border: 1px solid #E1E1E8;
 }
 .kss-styleguideSection { // Rendered example
 	background: @baseBackgroundColor;
