[TASK] Style consistency for 3rd level headings

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -225,7 +225,8 @@
 .kss-depth-3 > .kss-title {
 	margin: 0;
 	padding: 10px;
-	border-top: 1px solid #000;
+	border: 1px solid #000;
+	border-bottom: 0;
 	border-radius: @baseBorderRadius @baseBorderRadius 0 0;
 	font-size: @baseFontSize - 2;
 	font-weight: bold;
