[MISC] Fix the body's background if the content is less longer than the UA's window

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -22,7 +22,7 @@
 // Base element styles
 //
 .kssBody {
-	background: #edf1f4;
+	background: @baseBackgroundColor;
 	margin: 0;
 	overflow: hidden;
 }
@@ -173,6 +173,7 @@
 //
 .kss___siteWrapper {
 	position: relative;
+	background: #edf1f4;
 }
 .kss___contentWrapper {
 	padding: @baseIndent*4 @baseIndent*4 0;
