[MISC] Set the debug banner to position: fixed;

--- a/Resources/Private/Sass/Generic/_Debug.scss
+++ b/Resources/Private/Sass/Generic/_Debug.scss
@@ -10,7 +10,7 @@ Debug code wich applies if the $devMode variable is set to 'true'.
 Environment banner
 */
 body::before {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	z-index: 99999;
