--- a/Resources/Private/Sass/Objects/_Button.scss
+++ b/Resources/Private/Sass/Objects/_Button.scss
@@ -3,8 +3,9 @@ Button Object
 
 Display an anchor tag as a button
 
-.btn - Display an element as an button.
+.btn           - Display an element as an button.
 .btn.btn--full - Set the button width to the width of it's parent element.
+.btn:hover     - Standard hover styling for buttons.
 
 Markup:
 <button class="{$modifiers}">Send button</button>
