[DOCS] Fix a typo

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -56,7 +56,7 @@ Checkboxes / Radio buttons
 
 Markup:
 <label><input type="checkbox" /> I am an checkbox</label>
-<label><input type="radio" /> I am an radio buttons</label>
+<label><input type="radio" /> I am an radio button</label>
 
 Styleguide 2.1.2
 */
