--- a/Resources/Private/Sass/Objects/_Button.scss
+++ b/Resources/Private/Sass/Objects/_Button.scss
@@ -32,11 +32,13 @@ Styleguide 4.1.1
 
 	font-size: map-get($button, fontSize);
 	/**
-	 * Normalize the font-weight accross <input>, <button> and the .btn class
+	 * Normalize some rules accross the targeted elements (<input>, <button> and the .btn class).
 	 */
 	font-weight: normal;
 	line-height: 1;
 	color: map-get($button, textColor);
+	vertical-align: top;
+
 	&,
 	&:hover {
 		text-decoration: none;
