[TASK] Adapt the grunt un/deploy replace markers to the new 'useSingleFileBuild' r.js option - fix #33

--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -13,6 +13,4 @@
 <f:render partial="Page/Footer" arguments="{_all}" />
 
 
-<script type="text/javascript"
-	src="typo3conf/ext/<!= pkg.name !>/Resources/Private/Javascripts/Libaries/requirejs/require.js"
-	data-main="typo3conf/ext/<!= pkg.name !>/Resources/Private/Javascripts/Main"></script>
+<script type="text/javascript" src="typo3conf/ext/<!= pkg.name !>/Resources/Private/Javascripts/Libaries/requirejs/require.js" data-main="typo3conf/ext/<!= pkg.name !>/Resources/Private/Javascripts/Main"></script>
