[TASK] Change the import order of the '_Settings' files to prevent errors of missing

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -5,8 +5,8 @@
 //
 // Styleguide 1
 //
-@import "_Settings/_All",
-        "_Variables";
+@import "_Variables",
+        "_Settings/_All";
 
 //
 // Helper- & Generic-classes
