[BUGFIX] Fix the validation of arguments in map-removeKey() since  can be a string as well as a list

--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -161,8 +161,8 @@ $end: right !default;
 	@if(type-of($map) != "map") {
 		@warn 'Argument $map of map-removeKeys() must be a Sass map';
 	}
-	@if(type-of($keys) != "list") {
-		@warn 'Argument $keys of map-removeKeys() must be a Sass list';
+	@if(not (type-of($keys) == "list") and not (type-of($keys) == "string")) {
+		@warn 'Argument $keys of map-removeKeys() must be a Sass list or string';
 	}
 
 	$length: length($keys);
