[BUGFIX] Set the correct renamed variable names for the mixins @image-replacement and @font-size

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -118,7 +118,7 @@ Styleguide 2.1.4
 label {
 	display: block;
 	font-weight: $bold;
-	@include font-size(14, $append-vrythm: true);
+	@include font-size(14, $appendVrythm: true);
 	&[for] {
 		cursor: pointer;
 	}
