--- a/Resources/Private/Sass/Base/_Headings.scss
+++ b/Resources/Private/Sass/Base/_Headings.scss
@@ -56,7 +56,7 @@ Styleguide 2.2.2
 	$headingFontSize: map-fetch($headings, elements $key font-size);
 	$additionalRules: map-removeKeys(map-fetch($headings, elements $key), font-size);
 	#{$key}, .#{$key} {
-		@include font-size($headingFontSize, $append-vrythm: false);
+		@include font-size($headingFontSize, $appendVrythm: false);
 		@each $declaration, $value in $additionalRules {
 			#{$declaration}: $value;
 		}
